--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#404040</color>
+    <color name="gray">#424242</color>
+    <color name="darkgray">#2b2b2b</color>
+    <color name="orange">#ff5d0d</color>
+    <color name="blue">#0daaff</color>
+    <color name="dark_white">#d9d9d9</color>
 </resources>
