--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -27,7 +27,7 @@
             android:layout_marginStart="2dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
-            android:background="@drawable/blue_btn"
+            android:background="@drawable/gray_btn"
             android:textSize="0dp"
             app:layout_constraintBottom_toTopOf="@+id/button10"
             app:layout_constraintEnd_toStartOf="@+id/button01"
@@ -41,7 +41,7 @@
             android:layout_marginEnd="3dp"
             android:layout_marginBottom="4dp"
             android:textSize="0dp"
-            android:background="@drawable/orange_btn"
+            android:background="@drawable/gray_btn"
             app:layout_constraintBottom_toTopOf="@+id/button11"
             app:layout_constraintEnd_toStartOf="@+id/button02"
             app:layout_constraintStart_toEndOf="@+id/button00"
@@ -82,7 +82,7 @@
             android:layout_marginEnd="3dp"
             android:layout_marginBottom="3dp"
             android:textSize="0dp"
-            android:background="@drawable/blue_btn"
+            android:background="@drawable/gray_btn"
             app:layout_constraintBottom_toTopOf="@+id/button21"
             app:layout_constraintEnd_toStartOf="@+id/button12"
             app:layout_constraintStart_toEndOf="@+id/button10"
