--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -27,6 +27,7 @@
             android:layout_marginStart="2dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
+            android:layout_margin="6dp"
             android:background="@drawable/gray_btn"
             android:textSize="10dp"
             app:layout_constraintBottom_toTopOf="@+id/button10"
@@ -40,6 +41,7 @@
             android:layout_height="0dp"
             android:layout_marginEnd="3dp"
             android:layout_marginBottom="4dp"
+            android:layout_margin="6dp"
             android:textSize="10dp"
             android:background="@drawable/gray_btn"
             app:layout_constraintBottom_toTopOf="@+id/button11"
@@ -53,6 +55,7 @@
             android:layout_height="0dp"
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="4dp"
+            android:layout_margin="6dp"
             android:textSize="10dp"
             android:background="@drawable/gray_btn"
             app:layout_constraintBottom_toTopOf="@+id/button12"
@@ -68,6 +71,7 @@
             android:layout_marginStart="2dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="3dp"
+            android:layout_margin="6dp"
             android:textSize="10dp"
             android:background="@drawable/gray_btn"
             app:layout_constraintBottom_toTopOf="@+id/button20"
@@ -81,6 +85,7 @@
             android:layout_height="0dp"
             android:layout_marginEnd="3dp"
             android:layout_marginBottom="3dp"
+            android:layout_margin="6dp"
             android:textSize="10dp"
             android:background="@drawable/gray_btn"
             app:layout_constraintBottom_toTopOf="@+id/button21"
@@ -94,6 +99,7 @@
             android:layout_height="0dp"
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="3dp"
+            android:layout_margin="6dp"
             android:textSize="10dp"
             android:background="@drawable/gray_btn"
             app:layout_constraintBottom_toTopOf="@+id/button22"
@@ -108,6 +114,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="4dp"
+            android:layout_margin="6dp"
             android:textSize="10dp"
             android:background="@drawable/gray_btn"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -120,6 +127,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="3dp"
+            android:layout_margin="6dp"
             android:textSize="10dp"
             android:background="@drawable/gray_btn"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -132,6 +140,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="2dp"
+            android:layout_margin="6dp"
             android:textSize="10dp"
             android:background="@drawable/gray_btn"
             app:layout_constraintBottom_toBottomOf="parent"
