--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,12 +9,12 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#424242</color>
     <color name="darkgray">#2b2b2b</color>
-    <color name="orange">#ff8847</color>
-    <color name="blue">#51b5fc</color>
+    <color name="orange">#ff8800</color>
+    <color name="blue">#15f4ee</color>
     <color name="dark_white">#d9d9d9</color>
-    <color name="red">#ff3b3b</color>
-    <color name="green">#54ff71</color>
-    <color name="yellow">#fffa6b</color>
-    <color name="purple">#df6bff</color>
+    <color name="red">#ff0000</color>
+    <color name="green">#00ff00</color>
+    <color name="yellow">#ffff00</color>
+    <color name="purple">#ff10f0</color>
 
 </resources>
