--- a/app/src/main/res/drawable/gray_btn.xml
+++ b/app/src/main/res/drawable/gray_btn.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/darkgray"/>
-    <corners android:radius="15dp" />
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/light_gray">
+    <item android:id="@android:id/background">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/gray" />
+            <corners android:radius="10dp" />
+        </shape>
+    </item>
+</ripple>
+
