--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#424242</color>
     <color name="darkgray">#2b2b2b</color>
+    <color name="light_gray">#AAAAAA</color>
     <color name="orange">#ff8800</color>
     <color name="blue">#15f4ee</color>
     <color name="dark_white">#d9d9d9</color>
