--- a/app/src/main/res/layout/winner_popup.xml
+++ b/app/src/main/res/layout/winner_popup.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     android:background="@color/darkgray">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,7 +19,10 @@
             android:id="@+id/reset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="32dp"
             android:background="@drawable/white_btn"
             android:padding="20dp"
             android:text="Nova igra"
@@ -57,7 +61,7 @@
             android:id="@+id/colorId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_margin="16dp"
             android:text="CRVENI!"
             android:textColor="@color/white"
             android:textSize="48sp"
